force-app/main/default/objects/CAM_Reconciliation__c/CAM_Reconciliation__c.object-meta.xml
<CustomObject>
    <label>CAM Reconciliation</label>
    <nameField>
        <displayFormat>CAM-{0000}</displayFormat>
        <label>CAM Reconciliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAM Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>