force-app/main/default/objects/CAM_Reconciliation__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Asset</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>CAM Reconciliations</relationshipLabel>
    <relationshipName>CAM_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>