force-app/main/default/objects/CAM_Reconciliation__c/fields/Reconciliation_Year__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Year__c</fullName>
    <label>Reconciliation Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>