force-app/main/default/objects/CAM_Reconciliation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>In Review</fullName><default>false</default><label>In Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>