force-app/main/default/objects/CAM_Reconciliation__c/fields/Yardi_CAM_Id__c.field-meta.xml
<CustomField>
    <fullName>Yardi_CAM_Id__c</fullName>
    <label>Yardi CAM Id</label>
    <externalId>true</externalId>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>